# translation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent.md  check_script.py  config.json  connect_script.py  convert_table.py  extract_script.py  extract_script_auto.py  font_img_gen.py  font_table.py  font_test.py  pyproject.toml  recommend.txt  script_copy.py  setup.py  shift_JIS_kanji_code_list.htm  split_test.py  txt2json.py  update_script.py  write_script.py  write_script_auto.py
data/: gen_sjis_table.py  shiftjis.json  shiftjis.txt
doc/: image_conversion.md  translation_strategy.md  workspace_structure.md
etc/: diff_bin.py  diff_script_address.py  json2tbl.py  lzss_ds.py  make_dialogue_dictionary.py  tbl2json.py  test.py  txt2json.py  xml2json.py
font_table/: anex86.json  anex86.tbl  anex86dos.tbl  anex86jpn-60k.json  anex86jpn-full.json  anex86jpn.json  anex86kor.json  anex86kor.tbl  font_table-jpn-40k.json  font_table-jpn-5k.json  font_table-jpn-60k.json  font_table-jpn-7k.json  font_table-jpn-full.json  font_table-jpn.json  font_table-kor-convert.json  font_table-kor-jin.json
gspecific/: image_workspace.py
module/: __init__.py  ascii.py  check_script.py  content.py  decoding.py  font_image.py  font_table.py  jisx0201.py  name_codec.py  name_db.py  ozmlib.py  script.py  sjis_code.py  sound.py
name_db/: etc_db.json  family_name_db.json  full_name_db.json  given_name_db.json  item_db.json  region_db.json
tests/: test_image_workspace.py  test_name_codec.py  test_name_db.py
tools/: code2letter.py  filter_script.py  find_bin.py  find_text.py  fit_script.py  (+4 more)
(+140 files in other folders)
